Fixed too large button space #482

--- a/public/app/themes/jason/src/scss/forms.scss
+++ b/public/app/themes/jason/src/scss/forms.scss
@@ -48,7 +48,6 @@
     }
 
     input[type=submit],    
-    button,
     .btn,
     .wp-block-button a {
         border: none;        
